# MapReduce_Rust

./: Cargo.toml
src/: clean.sh  final.txt  lib.rs  main.rs  mr-0.txt  mr-1.txt  mr-2.txt  mr-3.txt  mr-4.txt  mr-5.txt  mr-6.txt  mr-7.txt  mr-8.txt  mr-9.txt  run.sh
src/app/: wc.rs
src/mr/: coordinator.rs  worker.rs
