[package]
name = "map_reduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bytes = "1.2.0"
futures-util = "0.3.21"
tokio = { version = "1.29.1", features = ["full"] }
tarpc = { version = "0.33.0", features = ["full"] }
tokio-serde = { version = "0.6", features = ["json"] }
log = "0.4.17"
rayon = "1.7.0"
futures = "0.3.28"
serde = "1.0.175"
fnv = "1.0.7"
regex = "1.9.1"